fix: background inactivating,  when mobile menu is opened. - added overflow:hidden for body

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,6 +31,8 @@
         margin-top: 60px;
     }
 
+}
 
-
+@media (max-width: 768px){
+    
 }
